--- a/client/package.json
+++ b/client/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.9.0",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
